--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -8,11 +8,11 @@
 @import url('./reset.css');
 @import url('./base.css');
 @import url('./container.css');
-@import url('./animations.css');
 
-/* Sections style */
-@import url('./header.css');
-@import url('./vite-promo.css');
-@import url('./badges.css');
-@import url('./back-link.css');
-@import url('./footer.css');
+/* Gallery style */
+
+@import url('./gallery.css');
+
+/* Form style */
+
+@import url('./form.css');
